syntax = "proto3";
package ai.mantik.planner.repository.protos;

message MantikArtifact {
    // JSON Mantikfile
    string mantikfile = 1;
    // File Id of Payload
    string file_id = 2;
    // Mantik Id
    string mantik_id = 3;
    // Item Id
    string item_id = 4;
    // Deployment info (optional)
    DeploymentInfo deployment_info = 5;

}

message DeploymentInfo {
    // Service name under which the item was deployed
    string name = 1;
    // Internal name under which the item was deployed
    string internal_url = 2;
    // External name under which the item was deployed
    string external_url = 3;
    // Timestamp of the deployment info (java milliseconds)
    int64 timestamp = 4;
}